--- a/CheapUpscaler.Blazor/Components/_Imports.razor
+++ b/CheapUpscaler.Blazor/Components/_Imports.razor
@@ -12,6 +12,9 @@
 @using CheapUpscaler.Blazor.Components.Shared
 @using CheapUpscaler.Blazor.Models
 @using CheapUpscaler.Blazor.Services
+@using CheapUpscaler.Shared.Models
+@using CheapUpscaler.Shared.Data
+@using CheapUpscaler.Shared.Services
 @using CheapUpscaler.Core
 @using CheapUpscaler.Core.Services.VapourSynth
 @using CheapUpscaler.Core.Services.RIFE
