--- a/CheapUpscaler.Worker/Components/_Imports.razor
+++ b/CheapUpscaler.Worker/Components/_Imports.razor
@@ -4,7 +4,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using MudBlazor
-@using CheapAvaloniaBlazor.Services
 
 @* Shared models *@
 @using CheapUpscaler.Shared.Models
@@ -31,6 +30,6 @@
 @using CheapUpscaler.Components.Shared
 @using CheapUpscaler.Components.Layout
 
-@* Desktop-specific services *@
-@using CheapUpscaler.Blazor
-@using CheapUpscaler.Blazor.Services
+@* Worker-specific services *@
+@using CheapUpscaler.Worker
+@using CheapUpscaler.Worker.Services
