--- a/CheapUpscaler.Worker/Components/Routes.razor
+++ b/CheapUpscaler.Worker/Components/Routes.razor
@@ -1,7 +1,7 @@
 @using CheapUpscaler.Components.Layout
 @using CheapUpscaler.Components.Pages
 
-<Router AppAssembly="@typeof(Home).Assembly" AdditionalAssemblies="new[] { typeof(App).Assembly }">
+<Router AppAssembly="@typeof(Home).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
