--- a/CheapUpscaler.Blazor/Components/App.razor
+++ b/CheapUpscaler.Blazor/Components/App.razor
@@ -1,29 +1,20 @@
-@using CheapUpscaler.Components.Layout
-@using CheapUpscaler.Components.Pages
+@using Microsoft.AspNetCore.Components.Web
 
-<Router AppAssembly="@typeof(Home).Assembly" AdditionalAssemblies="new[] { typeof(App).Assembly }">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-8">
-                <MudStack Spacing="4" AlignItems="AlignItems.Center">
-                    <MudIcon Icon="@Icons.Material.Filled.Warning" Size="Size.Large" Color="Color.Warning" />
-                    <MudText Typo="Typo.h4">Page Not Found</MudText>
-                    <MudText Typo="Typo.body1" Align="Align.Center">
-                        Sorry, we couldn't find the page you're looking for.
-                    </MudText>
-                    <MudButton Variant="Variant.Filled"
-                               Color="Color.Primary"
-                               StartIcon="@Icons.Material.Filled.Home"
-                               Href="/">
-                        Go Home
-                    </MudButton>
-                </MudStack>
-            </MudContainer>
-        </LayoutView>
-    </NotFound>
-</Router>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CheapUpscaler</title>
+    <base href="/" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+</head>
+<body>
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <script src="_framework/blazor.web.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/CheapAvaloniaBlazor/cheap-blazor-interop.js"></script>
+</body>
+</html>
